<resources>
    <string name="app_name">Matches</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_id">№ %s</string>
    <string name="player_id">22364</string>
    <string name="idplayertitle">ID:</string>
    <string name="titleageplayer">AGE:</string>
    <string name="heighttitileofplayer">HEIGHT:</string>
    <string name="player_country_title">COUNTRY:</string>
    <string name="matches">Matches</string>
</resources>